# openagent-eval

./: .gitignore  .pre-commit-config.yaml  AGENT.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  INSTRUCTIONS.md  PROJECT.md  QUICKSTART.md  README.md  ROADMAP.md  Release.md  SECURITY.md  SUPPORT.md  TEST_PR_REVIEW.md  codecov.yml  config.yaml  mkdocs.yml  openagent-eval-deck.html  pyproject.toml
.ai/: 00_PROJECT.md  01_ARCHITECTURE.md  02_AGENT.md  03_CONTEXT.md  04_DECISIONS.md  05_TASKS.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README-pr-congratulations.md  auto-assign-issue.yml  ci.yml  codeql.yml  coverage.yml  deploy.yml  docs.yml  eval.yml  issue-claim.yml  pr-congratulations.yml  pr-review.yml  release.yml
data/: corpus.json  sample_questions.json
docs/: 01_vision.md  02_problem_statement.md  03_product_requirements.md  04_architecture.md  05_project_structure.md  06_cli_spec.md  07_metric_system.md  08_plugin_system.md  09_coding_guidelines.md  10_development_plan.md  11_future_roadmap.md  12_retrievers.md  13_cicd_integration.md  14_issue_claim_system.md  api.md  architecture.md  cli.md  contributing.md  environment-variables.md  examples.md  faq.md  index.md  installation.md  quickstart.md  reports-output-formats.md  roadmap.md
docs/examples/: index.md
docs/overrides/: main.html
docs/providers/: index.md
docs/providers/embedders/: index.md  mock.md  sentence_transformers.md
docs/providers/llm/: anthropic.md  gemini.md  groq.md  index.md  mock.md  ollama.md  openai.md  openrouter.md
docs/providers/retrievers/: bm25.md  chroma.md  elasticsearch.md  faiss.md  http.md  index.md  memory.md  mock.md  pgvector.md  pinecone.md  qdrant.md  weaviate.md
docs/sdk/: quickstart.md
docs/stylesheets/: extra.css
examples/: corpus_and_related_modules.ipynb  rag_evaluation_tutorial.ipynb
openagent_eval/: __init__.py
openagent_eval/cli/: __init__.py  banner.py  context.py  main.py
openagent_eval/cli/commands/: __init__.py  audit.py  compare.py  delete.py  diagnose.py  doctor.py  init.py  list_evaluations.py  report.py  run.py  synth.py  test.py  ui.py  validate.py
openagent_eval/cli/utils/: __init__.py  callbacks.py  constants.py  discovery.py  display.py  helpers.py
openagent_eval/config/: __init__.py  loader.py  models.py  validator.py
openagent_eval/core/: __init__.py  engine.py  executor.py  pipeline.py  registry.py
openagent_eval/corpus/: __init__.py  auditor.py  base.py  contradiction.py  coverage.py  duplicates.py  models.py  staleness.py
openagent_eval/datasets/: __init__.py  base.py  csv_loader.py  factory.py  hf_loader.py  json_loader.py  jsonl_loader.py  models.py  pdf_loader.py
openagent_eval/diagnosis/: __init__.py  analyzer.py  blame.py  chunking.py  models.py
openagent_eval/exceptions/: __init__.py  base.py  cli.py  config.py  corpus.py  dataset.py  diagnosis.py  metric.py  plugin.py  provider.py  synthesis.py
openagent_eval/metrics/: __init__.py  base.py  models.py
openagent_eval/metrics/cost/: __init__.py  tokens.py
openagent_eval/metrics/generation/: __init__.py  bertscore.py  bleu.py  exact_match.py  f1.py  faithfulness.py  hallucination.py  llm_judge.py  relevancy.py  rouge.py  similarity.py
openagent_eval/metrics/nli/: __init__.py  claim_extractor.py  evidence_finder.py  judge.py
openagent_eval/metrics/performance/: __init__.py  latency.py
openagent_eval/metrics/retrieval/: __init__.py  hit_rate.py  mrr.py  ndcg.py  precision.py  precision_at_k.py  recall.py  recall_at_k.py
openagent_eval/plugins/: __init__.py  discovery.py  loader.py  manager.py
openagent_eval/plugins/examples/: __init__.py  custom_metric.py
openagent_eval/providers/: __init__.py  factory.py  models.py
openagent_eval/providers/base/: __init__.py  llm.py  retriever.py
openagent_eval/providers/embedders/: __init__.py  base.py  mock.py  sentence_transformers.py
openagent_eval/providers/llm/: __init__.py  anthropic.py  gemini.py  groq.py  mock.py  ollama.py  openai.py  openrouter.py
openagent_eval/providers/retrievers/: __init__.py  _scoring.py  _validation.py  bm25.py  chroma.py  elasticsearch.py  faiss.py  http.py  memory.py  mock.py  pgvector.py  pinecone.py  qdrant.py  weaviate.py
openagent_eval/reports/: __init__.py  base.py  comparison.py  html.py  json_report.py  manager.py  markdown.py  terminal.py
openagent_eval/reports/templates/: report.html
openagent_eval/synthesis/: __init__.py  adversarial.py  generator.py  models.py  question_gen.py
openagent_eval/ui/: __init__.py  app.py  screens.py  styles.tcss  theme.py  widgets.py
openagent_eval/ui/components/: __init__.py  command_input.py  footer.py  message_list.py  spinner.py
openagent_eval/ui/tools/: eval.py
scripts/: run_real_eval.py
tests/: conftest.py
tests/fixtures/: conftest.py
tests/integration/: test_corpus_audit.py  test_nli_metrics.py  test_pipeline_integration.py
tests/integration/test_cli_integration/: conftest.py  test_compare.py  test_doctor.py  test_init.py  test_list.py  test_report.py  test_run.py
tests/integration/test_pipeline/: test_full_pipeline_reports.py  test_mock_e2e.py  test_ollama_pipeline_regression.py
tests/sample_data/: valid_dataset.json
tests/unit/: test_exceptions.py
tests/unit/test_cicd/: __init__.py  test_cli_test.py  test_plugin.py  test_thresholds.py
tests/unit/test_cli/: test_audit.py  test_audit_config.py  test_cli_improvements.py  test_main.py  test_phase14_redesign.py  test_phase14_ui.py  test_synth.py
tests/unit/test_config/: test_models.py
tests/unit/test_core/: test_engine.py
tests/unit/test_corpus/: test_auditor.py  test_base.py  test_contradiction.py  test_exceptions.py  test_models.py  test_staleness.py
tests/unit/test_datasets/: test_base.py  test_csv_loader.py  test_hf_loader.py  test_json_loader.py  test_jsonl_loader.py  test_models.py  test_pdf_loader.py
tests/unit/test_diagnosis/: __init__.py  test_analyzer.py  test_blame.py  (+3 more)
(+41 files in other folders)
