[project]
name = "openagent-eval"
version = "0.1.0"
description = "Open-source CLI framework for evaluating RAG systems and AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [
    {name = "OpenAgent Eval Contributors"}
]
keywords = ["rag", "evaluation", "ai", "llm", "metrics", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
evaluation = [
    "ragas>=0.1.0",
    "deepeval>=1.0.0",
    "sentence-transformers>=2.0.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.0.0",
]
datasets = [
    "datasets>=2.0.0",
]
pdf = [
    "pypdf>=4.0.0",
]
# --- Retriever provider extras -------------------------------------------
qdrant = ["qdrant-client>=1.7.0"]
pinecone = ["pinecone-client>=2.2.0"]
weaviate = ["weaviate-client>=4.5.0"]
faiss = ["faiss-cpu>=1.7.0"]
pgvector = ["psycopg[binary]>=3.1.0", "pgvector>=0.2.0"]
elasticsearch = ["elasticsearch>=8.0.0"]
bm25 = ["rank-bm25>=0.2.0"]
all = [
    "openagent-eval[dev,evaluation,datasets,pdf,qdrant,pinecone,weaviate,faiss,pgvector,elasticsearch,bm25]",
]

[project.scripts]
oaeval = "openagent_eval.cli.main:app"

[project.entry-points."openagent_eval.metrics"]
# Custom metrics can be registered here

[project.entry-points."openagent_eval.providers"]
# Custom providers can be registered here

[project.entry-points."openagent_eval.retrievers"]
# Custom retrievers can be registered here

[project.entry-points."openagent_eval.dataset_loaders"]
# Custom dataset loaders can be registered here

[project.entry-points."openagent_eval.report_generators"]
# Custom report generators can be registered here

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openagent_eval"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openagent_eval"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["openagent_eval"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
